add sse
